Add options and field update support

--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -22,6 +22,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="bg-info text-center embed-responsive-item">
                     <h3>1</h3>
+                    <input value="0">
                 </div>
             </div>
         </div>
@@ -33,6 +34,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="bg-info text-center embed-responsive-item">
                     <h3>2</h3>
+                    <input value="1">
                 </div>
             </div>
         </div>
@@ -43,6 +45,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="bg-info text-center embed-responsive-item">
                     <h3>3</h3>
+                    <input value="2">
                 </div>
             </div>
         </div>
@@ -53,6 +56,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="bg-info text-center embed-responsive-item">
                     <h3>4</h3>
+                    <input value="3">
                 </div>
             </div>
         </div>
@@ -63,6 +67,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="bg-info text-center embed-responsive-item">
                     <h3>5</h3>
+                    <input value="4">
                 </div>
             </div>
         </div>
