--- a/js/tests/visiual/sortable.html
+++ b/js/tests/visiual/sortable.html
@@ -7,6 +7,7 @@
     <body>
         <div
          data-arrange="html5-sortable"
+         data-field="input"
          class="sortable-container row">
 
             <div
@@ -15,6 +16,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>1</h3>
+                        <input value="0">
                     </div>
                 </div>
             </div>
@@ -25,6 +27,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>2</h3>
+                        <input value="1">
                     </div>
                 </div>
             </div>
@@ -35,6 +38,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>3</h3>
+                        <input value="2">
                     </div>
                 </div>
             </div>
@@ -45,6 +49,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>4</h3>
+                        <input value="3">
                     </div>
                 </div>
             </div>
@@ -55,6 +60,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>5</h3>
+                        <input value="4">
                     </div>
                 </div>
             </div>
