--- a/js/tests/visiual/multiple.html
+++ b/js/tests/visiual/multiple.html
@@ -9,11 +9,11 @@
             <div class="col-sm-5">
                 <div
                  data-arrange="html5-sortable"
-                 class="sortable-container row">
+                 class="row">
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>1</h3>
@@ -23,7 +23,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>2</h3>
@@ -33,7 +33,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>3</h3>
@@ -43,7 +43,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>4</h3>
@@ -53,7 +53,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>5</h3>
@@ -70,7 +70,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>1</h3>
@@ -80,7 +80,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>2</h3>
@@ -90,7 +90,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>3</h3>
@@ -100,7 +100,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>4</h3>
@@ -110,7 +110,7 @@
 
                     <div
                      draggable="true"
-                     class="sortable-item col-sm-4">
+                     class="col-sm-4">
                         <div class="embed-responsive embed-responsive-16by9">
                             <div class="bg-info text-center embed-responsive-item">
                                 <h3>5</h3>
