--- a/js/tests/visiual/sortable.html
+++ b/js/tests/visiual/sortable.html
@@ -8,11 +8,11 @@
         <div
          data-arrange="html5-sortable"
          data-field="input"
-         class="sortable-container row">
+         class="row">
 
             <div
              draggable="true"
-             class="sortable-item col-sm-3">
+             class="col-sm-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>1</h3>
@@ -23,7 +23,7 @@
 
             <div
              draggable="true"
-             class="sortable-item col-sm-3">
+             class="col-sm-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>2</h3>
@@ -34,7 +34,7 @@
 
             <div
              draggable="true"
-             class="sortable-item col-sm-3">
+             class="col-sm-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>3</h3>
@@ -45,7 +45,7 @@
 
             <div
              draggable="true"
-             class="sortable-item col-sm-3">
+             class="col-sm-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>4</h3>
@@ -56,7 +56,7 @@
 
             <div
              draggable="true"
-             class="sortable-item col-sm-3">
+             class="col-sm-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div class="bg-info text-center embed-responsive-item">
                         <h3>5</h3>
