--- a/js/tests/visiual/table.html
+++ b/js/tests/visiual/table.html
@@ -6,9 +6,7 @@
     </head>
     <body>
         <table class="table table-bordered">
-            <tbody
-             data-arrange="html5-sortable"
-             class="sortable-container">
+            <tbody data-arrange="html5-sortable">
                 <tr draggable="true">
                     <td>1</td>
                     <td>1</td>
@@ -31,17 +29,13 @@
 
         <table class="table table-bordered">
             <tbody>
-                <tr
-                 data-arrange="html5-sortable"
-                 class="sortable-container">
+                <tr data-arrange="html5-sortable">
                     <td draggable="true">1</td>
                     <td draggable="true">2</td>
                     <td draggable="true">3</td>
                 </tr>
 
-                <tr
-                 data-arrange="html5-sortable"
-                 class="sortable-container">
+                <tr data-arrange="html5-sortable">
                     <td draggable="true">1</td>
                     <td draggable="true">2</td>
                     <td draggable="true">3</td>
