--- a/genindex.html
+++ b/genindex.html
@@ -37,7 +37,10 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/js/html5-sortable.min.js"></script>
+    <link rel="shortcut icon" href="_static/favicon.ico"/>
     <link rel="top" title="Html5 Sortable 1.0.0 documentation" href="index.html" />
+  
+  <link rel="apple-touch-icon" href="_static/_static/clippings_logo_sq.jpg" />
   
    
 
