--- a/search.html
+++ b/search.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/searchtools.js"></script>
     <script type="text/javascript" src="_static/js/html5-sortable.min.js"></script>
+    <link rel="shortcut icon" href="_static/favicon.ico"/>
     <link rel="top" title="Html5 Sortable 1.0.0 documentation" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
@@ -44,6 +45,8 @@
   
   <script type="text/javascript" id="searchindexloader"></script>
   
+  
+  <link rel="apple-touch-icon" href="_static/_static/clippings_logo_sq.jpg" />
   
    
 
